docker-compose/apm/k8s/prometheus/prometheus-svc-i.yml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-svc-i
spec:
  selector:
    prometheus: prometheus
  ports:
  - name: web
    port: 9090
