docker-compose/apm/k8s/prometheus/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    # remove prefix
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /p(/|$)(.*)
            backend:
              service:
                name: prometheus-svc-i
                port:
                  number: 9090
          - pathType: Prefix
            path: /e(/|$)(.*)
            backend:
              service:
                name: example
                port:
                  number: 8080
          - pathType: Prefix
            path: /n(/|$)(.*)
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
